[package]
name = "rustree"
version = "0.1.0"
authors = ["Akshay <nerdy@peppe.rs>", "Prajwal S N <prajwalnadig21@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.100"
ra_ap_syntax = "0.0.270"
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.51"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
